fix scrollbar and sidescrolling home page

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,8 @@
 main {
  width: 100vw;
 }
+
+html, body, main {
+  width: 100%;
+  overflow-x: hidden;
+}
