--- a/src/Components/CurrentReviews/CurrentReviews.css
+++ b/src/Components/CurrentReviews/CurrentReviews.css
@@ -32,7 +32,7 @@ table tbody tr:nth-of-type(even) {
 }
 
 table tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+  border-bottom: 2px solid #06203870;
 }
 
 table tbody tr.active-row {
@@ -42,10 +42,11 @@ table tbody tr.active-row {
 
 ::-webkit-scrollbar {
   background-color: rgba(255, 255, 255, 0);
-
+  height: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #009879;
+  background-color: #30c090;
   border-radius: 5px;;
 }
